again updated Index css

--- a/src/index.css
+++ b/src/index.css
@@ -53,3 +53,15 @@
     animation: bounce 4s linear infinite;
   }
 }
+
+@keyframes bounce {
+  0% {
+    transform: translateY(-20px);
+  }
+  50% {
+    transform: translateY(20px);
+  }
+  100% {
+    transform: translateY(-20px);
+  }
+}
